--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ async-timeout==1.4.0
 chardet==3.0.4
 click==6.7
 discord.py==0.16.11
-Flask==0.12.2
+flask>=0.12.3
 itsdangerous==0.24
 Jinja2>=2.10.1
 MarkupSafe==1.0
